added close button in SongDetailView

--- a/Shared/zh-Hant.lproj/Localizable.strings
+++ b/Shared/zh-Hant.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "Artists" = "演出者";
 "Composers" = "作曲者";
 "Play" = "播放";
+"Close" = "關閉";
 // MARK: - Settings
 "Settings" = "設定";
 // MARK: - About
