added data recording view

--- a/Shared/zh-Hant.lproj/Localizable.strings
+++ b/Shared/zh-Hant.lproj/Localizable.strings
@@ -63,6 +63,12 @@
 "Uncompressed audio, only use when the internet is fast" = "在網路狀況許可下，可選擇此選項聆聽高音質音樂";
 
 "The audio quality setting will not work for songs that are currently in the queue" = "音質設定不會對目前佇列中的歌曲生效";
+// MARK: - Data record
+"Data record" = "資料紀錄";
+"Record playback data" = "記錄播放資料";
+"Clear the recorded data" = "清除已記錄的資料";
+"%lld records have been recorded" = "目前已記錄 %lld 筆資料";
+"The data will only be calculated on your server and will not be uploaded to the Internet. The feature can provide you with a better experience (like: annual review, recent play). You can turn off this feature below and clear the recorded data if you want." = "資料僅會於您的伺服器進行運算，不會被上傳至網路進行分析。 該功能可提供您更優質的使用體驗（如：年度回顧、最近播放）。 若您有疑慮可於下方關閉此功能，並將已記錄的資料清除。";
 // MARK: - Login
 "Server" = "伺服器";
 "Username" = "使用者名稱";
@@ -79,7 +85,6 @@
 "Codec" = "編碼格式";
 "Bitrate" = "位元率";
 "Year" = "年份";
-
 // MARK: - Create playlist
 "Create playlist" = "建立播放清單";
 "Playlist name" = "播放清單名稱";
