added search song & artist view
Signed-off-by: gnehs <jayuiop@gmail.com>

--- a/Shared/zh-Hant.lproj/Localizable.strings
+++ b/Shared/zh-Hant.lproj/Localizable.strings
@@ -25,6 +25,8 @@
 "Search ..." = "搜尋 ...";
 "Cancel" = "取消";
 "Library" = "媒體庫";
+"Song" = "歌曲";
+"Songs" = "歌曲";
 "Album" = "專輯";
 "Albums" = "專輯";
 "Playlist" = "播放清單";
